--- a/roles/pacemaker-install/tasks/main.yml
+++ b/roles/pacemaker-install/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- include: yum-repo-centos.yml
+  when: ansible_distribution == 'CentOS'
+
 - include: pacemaker-install.yml
 - include: corosync-config.yml
 
