Update package version and config to 1.1.15-1.1

--- a/roles/pacemaker-install/tasks/config-rhel6.yml
+++ b/roles/pacemaker-install/tasks/config-rhel6.yml
@@ -26,5 +26,5 @@
     state=present
     backup=yes
   with_items:
-    - { regexp: 'modprobe softdog', line: '    [ -c /dev/watchdog ] || modprobe softdog soft_margin=6' }
+    - { regexp: 'modprobe softdog', line: '    [ -c /dev/watchdog ] || modprobe softdog' }
     - { regexp: 'pidof corosync \|\| false', line: '    pidof corosync || false' }
