00-download.yml: update download URL for 1.1.15-1.1

--- a/00-download.yml
+++ b/00-download.yml
@@ -3,10 +3,10 @@
   tasks:
     - name: Download pacemaker-repo-1.1
       get_url:
-        url="http://osdn.jp/frs/redir.php?m=iij&f=%2Flinux-ha%2F{{item.rev}}%2F{{item.package}}"
+        url="https://osdn.net/frs/redir.php?m=iij&f=%2Flinux-ha%2F{{item.rev}}%2F{{item.package}}"
         dest=./roles/pacemaker-install/files/
       with_items:
-        - { rev: 66140, package: pacemaker-repo-1.1.14-1.1.el7.x86_64.rpm }
-        - { rev: 66140, package: pacemaker-repo-debuginfo-1.1.14-1.1.el7.x86_64.rpm }
-        - { rev: 66141, package: pacemaker-repo-1.1.14-1.1.el6.x86_64.rpm }
-        - { rev: 66141, package: pacemaker-repo-debuginfo-1.1.14-1.1.el6.x86_64.rpm }
+        - { rev: 66936, package: pacemaker-repo-1.1.15-1.1.el7.x86_64.rpm }
+        - { rev: 66936, package: pacemaker-repo-debuginfo-1.1.15-1.1.el7.x86_64.rpm }
+        - { rev: 66937, package: pacemaker-repo-1.1.15-1.1.el6.x86_64.rpm }
+        - { rev: 66937, package: pacemaker-repo-debuginfo-1.1.15-1.1.el6.x86_64.rpm }
