Fix unicast support

--- a/roles/pacemaker-install/tasks/corosync-config.yml
+++ b/roles/pacemaker-install/tasks/corosync-config.yml
@@ -2,13 +2,13 @@
   template:
     src="corosync.conf.j2"
     dest="/etc/corosync/corosync.conf"
-  when: TRANSPORT != "udpu"
+  when: TRANSPORT is not defined or TRANSPORT != "udpu"
 
 - name: create corosync.conf for unicast
   template:
     src="corosync.conf-udpu.j2"
     dest="/etc/corosync/corosync.conf"
-  when: TRANSPORT == "udpu"
+  when: TRANSPORT is defined and TRANSPORT == "udpu"
 
 - name: generate authkey on the first host
   shell: /usr/sbin/corosync-keygen -l
