--- a/roles/pacemaker-uninstall/tasks/main.yml
+++ b/roles/pacemaker-uninstall/tasks/main.yml
@@ -1,4 +1,10 @@
 - include: pacemaker-uninstall.yml
 
+## Nothing to unconfig for RHEL6 right now
+#- include: unconfig-rhel6.yml
+#  when: ansible_distribution_major_version == '6'
+- include: unconfig-rhel7.yml
+  when: ansible_distribution_major_version == '7'
+
 - include: yum-repo-erase-centos.yml
   when: ansible_distribution == 'CentOS'
