detect firewalld with the compatible way to ansible 2.1

--- a/roles/pacemaker-install/tasks/config-rhel7.yml
+++ b/roles/pacemaker-install/tasks/config-rhel7.yml
@@ -38,18 +38,19 @@
 
 ### allow communitation ports if firewalld is in use
 - name: check if firewalld is enabled
-  systemd:
-    name: firewalld
-  register: firewalld
+  command: firewall-cmd --state
+  changed_when: false
+  failed_when: false
+  register: firewalld_state
 
 - name: allow Pacemaker/Corosync communication through firewalld (permanent)
   command: firewall-cmd --permanent --add-service=high-availability
   register: result
   changed_when: '"ALREADY_ENABLED" not in result.stderr'
-  when: firewalld.status.ActiveState == "active"
+  when: firewalld_state.rc == 0
 
 - name: allow Pacemaker/Corosync communication through firewalld (runtime)
   command: firewall-cmd --add-service=high-availability
   register: result
   changed_when: '"ALREADY_ENABLED" not in result.stderr'
-  when: firewalld.status.ActiveState == "active"
+  when: firewalld_state.rc == 0
