--- a/roles/pacemaker-uninstall/tasks/unconfig-rhel7.yml
+++ b/roles/pacemaker-uninstall/tasks/unconfig-rhel7.yml
@@ -1,17 +1,18 @@
 ### remove firewalld configuration
 - name: check if firewalld is enabled
-  systemd:
-    name: firewalld
-  register: firewalld
+  command: firewall-cmd --state
+  changed_when: false
+  failed_when: false
+  register: firewalld_state
 
 - name: remove firewalld configuration for Pacemaker/Corosync (permanent)
   command: firewall-cmd --permanent --remove-service=high-availability
   register: result
   changed_when: '"NOT_ENABLED" not in result.stderr'
-  when: firewalld.status.ActiveState == "active"
+  when: firewalld_state.rc == 0
 
 - name: remove firewalld configuration for Pacemaker/Corosync (runtime)
   command: firewall-cmd --remove-service=high-availability
   register: result
   changed_when: '"NOT_ENABLED" not in result.stderr'
-  when: firewalld.status.ActiveState == "active"
+  when: firewalld_state.rc == 0
