suppress warning in ansible 2.3
see: https://github.com/ansible/ansible/issues/22397

--- a/roles/pacemaker-uninstall/tasks/pacemaker-uninstall.yml
+++ b/roles/pacemaker-uninstall/tasks/pacemaker-uninstall.yml
@@ -39,4 +39,4 @@
 
 - name: remove CIB config if requested
   file: path=/var/lib/pacemaker state=absent
-  when: "{{ REMOVE_CIB }} | bool"
+  when: REMOVE_CIB | bool
