10-pacemaker-install: install NetworkManager-config-server on CentOS for RHEL compatibility

--- a/roles/pacemaker-install/tasks/main.yml
+++ b/roles/pacemaker-install/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- include: yum-repo-centos.yml
+- include: config-centos.yml
   when: ansible_distribution == 'CentOS'
 
 - include: pacemaker-install.yml
