avoid relying on squash_actions for yum warned in ansible-2.7
As of ansible-2.7, a deprecation warning will be shown without this fix.

```
[DEPRECATION WARNING]: Invoking "yum" only once while using a loop via squash_actions is deprecated. Instead
 of using a loop to supply multiple items and specifying `name: "{{ item }}"`, please use `name:
['pacemaker', 'corosync', 'libqb', 'cluster-glue', 'cluster-glue-libs', 'resource-agents', 'pm_crmgen',
'pm_logconv-cs', 'pm_diskd', 'pm_extras', 'crmsh', 'pssh', 'pacemaker-repo']` and remove the loop. This
feature will be removed in version 2.11. Deprecation warnings can be disabled by setting
deprecation_warnings=False in ansible.cfg.
```

--- a/roles/pacemaker-install/tasks/pacemaker-install.yml
+++ b/roles/pacemaker-install/tasks/pacemaker-install.yml
@@ -1,17 +1,15 @@
 ---
 - name: Copy Pacemaker repository package to nodes
   copy:
-    src="{{ item }}"
-    dest="/tmp/"
-  with_fileglob: "pacemaker-repo-1.1.21-1.1.el{{ ansible_distribution_major_version }}.x86_64.rpm"
+    src: "pacemaker-repo-1.1.21-1.1.el{{ ansible_distribution_major_version }}.x86_64.rpm"
+    dest: "/tmp/"
   register: rc_copy
 
 - name: install the repository package
   yum:
-    name="{{ item.dest }}"
-    update_cache=yes
-    state=present
-  with_items: "{{ rc_copy.results }}"
+    name: "{{ rc_copy.dest }}"
+    state: present
+    update_cache: yes
 
 - name: cleanup yum cache
   command: yum clean all warn=no
